// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageContent /> Should adopt the "content" property 1`] = `
<Wrapper
  animate={true}
>
  <PageHeader
    arrowPosition="bottom-left"
  />
  <ContentWrapper>
    <SpeechBubble
      arrowHeight="9vh"
      arrowPosition="bottom-right"
      backgroundColor="#aedd2c"
      color="#000"
      isGhost={false}
      makeAppear={false}
      maxWidth="30em"
      padding="1.5rem"
      showArrowBreakpoint="750px"
    >
      Testing
    </SpeechBubble>
  </ContentWrapper>
</Wrapper>
`;

exports[`<PageContent /> Should adopt the "noSpeechBubble" property 1`] = `
<Wrapper
  animate={true}
>
  <PageHeader
    arrowPosition="bottom-left"
  />
  <ContentWrapper>
    Testing
  </ContentWrapper>
</Wrapper>
`;

exports[`<PageContent /> Should adopt the "title" property 1`] = `
<Wrapper
  animate={true}
>
  <PageHeader
    arrowPosition="bottom-left"
  >
    Testing
  </PageHeader>
  <ContentWrapper>
    <SpeechBubble
      arrowHeight="9vh"
      arrowPosition="bottom-right"
      backgroundColor="#aedd2c"
      color="#000"
      isGhost={false}
      makeAppear={false}
      maxWidth="30em"
      padding="1.5rem"
      showArrowBreakpoint="750px"
    />
  </ContentWrapper>
</Wrapper>
`;

exports[`<PageContent /> Should render and match the snapshot 1`] = `
<Wrapper
  animate={true}
>
  <PageHeader
    arrowPosition="bottom-left"
  />
  <ContentWrapper>
    <SpeechBubble
      arrowHeight="9vh"
      arrowPosition="bottom-right"
      backgroundColor="#aedd2c"
      color="#000"
      isGhost={false}
      makeAppear={false}
      maxWidth="30em"
      padding="1.5rem"
      showArrowBreakpoint="750px"
    />
  </ContentWrapper>
</Wrapper>
`;
